feat(search): add player cards filter on search endpoint.
